--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,374 @@
-.App {
-  text-align: center;
+:root {
+	--primaryColor: #af9a7d;
+	--mainTurquoise: rgb(97, 204, 231);
+	--mainWhite: #fff;
+	--offWhite: #f7f7f7;
+	--mainBlack: #222;
+	--mainGrey: #d44242;
+	--darkBlue: #1a1a4e;
+	/* --darkBlue: #7e3232; */
+	/* --darkBlue: #0d2150; */
+
+	--lightShadow: 2px 5px 3px 0px rgba(163, 136, 136, 0.5);
+	--whiteShadow: 2px 2px 3px 0px rgba(250, 248, 248, 0.685);
+	--darkShadow: 4px 10px 5px 0px rgba(0, 0, 0, 0.5);
+	--mainTransition: all 0.3s linear;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+nav {
+	top: 0;
+}
+.d-nav-flex {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 100%;
+	height: 70px;
+	box-shadow: var(--darkShadow);
+	right: 0;
+}
+.d-nav-flex ul > li {
+	top: 0;
+	text-decoration: none;
+	list-style: none;
+}
+.d-nav-inline-flex {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+.d-nav-inline-flex > li {
+	margin-left: 20px;
+	margin-right: 30px;
+}
+.dash-logo {
+	display: block;
+}
+.FaBars-display {
+	display: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* top Title */
+.top-title-flex {
+	display: flex;
+	justify-content: space-between;
+	margin-bottom: 20px;
+}
+.bread-crums {
+	color: var(--darkBlue);
+	font-weight: bold;
+	font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+/*****/
+/* Drawer of the styles */
+
+.main-drawer {
+	display: flex;
+	top: 0;
+	margin-top: 0;
+	flex-direction: column;
+	background-color: var(--darkBlue);
+	justify-content: space-between;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	z-index: 10000;
+	width: 220px;
+	transition: all 850ms;
 }
 
-.App-link {
-  color: #61dafb;
+.drawer-columns {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	gap: 2px;
+	color: var(--mainWhite);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.layout {
+	display: flex;
+	flex: 1 auto;
+}
+.page-container {
+	margin-left: 12px;
+	margin-right: 12px;
+}
+.content {
+	background-color: rgb(228, 226, 226);
+	margin-top: 10px;
+	flex: 1;
+	height: 86vh;
+	overflow: auto;
+}
+.main-sidebar {
+	display: flex;
+	flex-direction: column;
+	background-color: var(--darkBlue);
+	justify-content: space-between;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	height: 88vh;
+	width: 220px;
+	overflow: auto;
+}
+
+.sidebar-columns {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	gap: 2px;
+	color: var(--mainWhite);
+}
+.profile_name {
+	font-size: x-small;
+	text-transform: lowercase;
+	color: rgb(255, 255, 255) !important;
+}
+
+.active-sidebar {
+	font-weight: 600;
+	color: aqua !important;
+}
+#bg-active {
+	background-color: rgb(10, 10, 39);
+}
+
+.dash-user {
+	text-align: center;
+}
+.sidebar-bottom {
+	justify-content: flex-end;
+	margin-top: 4rem;
+	color: var(--mainWhite);
+	/* align-content: center; */
+	/* align-items: center; */
+	align-self: center;
+}
+
+.table-container {
+	margin-top: 12px;
+	overflow-x: auto;
+	margin-bottom: 50px;
+}
+table {
+	border: 1px solid var(--darkBlue);
+	width: 100%;
+	background-color: var(--mainWhite);
+	border-collapse: collapse;
+	margin-bottom: 15px;
+}
+td,
+th {
+	padding: 8px;
+}
+tr:nth-child(odd) {
+	background-color: rgb(206, 194, 194);
+}
+th {
+	background-color: var(--darkBlue);
+	color: var(--mainWhite);
+}
+/* tr:nth-child(even) {
+	/* background-color: rgb(108, 138, 111); */
+
+.table-inline-flex {
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+	gap: 5px;
+}
+.dash-nav {
+	display: flex;
+	justify-content: space-evenly;
+	align-content: center;
+	align-items: center;
+}
+.dash-nav > li {
+	list-style: none;
+	padding: 8px;
+}
+.dash-nav:hover {
+	cursor: pointer;
+	background-color: rgb(10, 10, 39);
+}
+.dash-name {
+	flex: 80%;
+	justify-content: center;
+	place-content: center;
+}
+.icon {
+	flex: 20%;
+	place-items: center;
+	margin-left: 20px;
+}
+
+.tutors-flex {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-evenly;
+	flex-wrap: wrap;
+	gap: 10px;
+}
+.tutors-card {
+	background-color: var(--mainWhite);
+	border-radius: 8px;
+	padding: 18px;
+	text-align: center;
+}
+.tutor-name {
+	color: var(--darkBlue);
+	font-weight: bold;
+}
+
+.division-title {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+}
+.head-title {
+	color: var(--darkBlue);
+	font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+
+.card-box-flex {
+	display: flex;
+	justify-content: space-evenly;
+	flex-direction: row;
+	padding: 15px;
+	flex-wrap: wrap;
+	row-gap: 15px;
+	column-gap: 6px;
+}
+
+.card-box {
+	/* background-color: var(--mainWhite); */
+	background-color: rgb(250, 229, 243);
+	padding: 20px;
+	color: var(--darkBlue);
+	width: 260px;
+	border-radius: 10px;
+}
+.card-box h1 {
+	font-weight: bolder;
+}
+
+.card-box-inlineflex {
+	display: flex;
+	justify-content: space-between;
+}
+
+.divider {
+	border: 1px solid #ccc;
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+
+/***/
+
+.content-top-flex {
+	display: flex;
+	justify-content: space-between;
+	background-color: var(--mainWhite);
+	flex-wrap: wrap;
+	padding: 20px;
+}
+.search-area-dash {
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	align-items: center;
+	align-content: center;
+	gap: 4px;
+}
+.suggestions-area {
+	text-align: center;
+	box-shadow: var(--lightShadow);
+	border: 12px;
+	width: 450px;
+	background-color: var(--darkBlue);
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 5px;
+	z-index: 1000;
+}
+.suggest-list-dash {
+	color: var(--mainWhite);
+}
+.suggest-list-dash:hover {
+	cursor: pointer;
+}
+
+.btn {
+	/* background-color: var(--darkBlue) !important; */
+	/* border-color: none !important; */
+	/* color: var(--mainWhite) !important; */
+}
+.search-box-dash {
+	flex: 1;
+	width: 480px;
+	height: 56px;
+	padding: 20px;
+	border-radius: 5px;
+}
+
+.content-left-side {
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-end;
+	align-self: flex-end;
+	align-items: center;
+}
+
+/* form-styles */
+.eg-text {
+	color: rgb(156, 151, 151);
+	font-size: 15px;
+}
+.required {
+	color: red !important;
+}
+
+/* auth styles */
+.center-center-login {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	align-self: center;
+	flex-direction: column;
+	margin-top: 17%;
+	justify-self: center;
+	justify-items: center;
+}
+.center-center-signup {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	align-self: center;
+	flex-direction: column;
+	margin-top: 10%;
+	justify-self: center;
+	justify-items: center;
+}
+
+@media screen and (max-width: 972px) {
+	.FaBars-display {
+		display: block;
+	}
+	.dash-logo {
+		display: none;
+	}
+	.main-sidebar {
+		display: none;
+	}
+	.bread-crums {
+		font-size: large;
+	}
+	.head-title {
+		font-size: large;
+	}
+
+	td,
+	th {
+		padding: 8px;
+	}
 }
